v5.12.0/python/_sources/paraview.simple.DataSetCSVWriter.rst.txt
paraview.simple.DataSetCSVWriter
================================

.. currentmodule:: paraview.simple

.. autofunction:: DataSetCSVWriter

Data Descriptors
----------------


   
   AddMetaData
       It is possible for this filter to add additional meta-data to the field data such as point coordinates (when point attributes are selected and input is point-set) or structured coordinates etc. To enable this addition of extra information, turn this flag on.
   
   AddTime
       When set, the writer will add a "Time" column to the generated file indicating the current dataset time, if any.
   
   AddTimeStep
       When set, the writer will add a "TimeStep" column to the generated file indicating the current dataset time step, if any.
   
   CellDataArrays
       Select the cell data arrays to pass through
   
   ChooseArraysToWrite
       Explicitly choose which arrays to write.
   
   EdgeDataArrays
       Select the edge data arrays to pass through
   
   FieldAssociation
       Select the attribute data to pass.
   
   FieldDataArrays
       Select the field data arrays to pass through
   
   FieldDelimiter
       Used to set the delimiter character. This is hidden from the user and set automatically based on the file extension. An extension of .tsv will set the delimiter character to a tab. Otherwise a comma will be used as the delimiter.
   
   FileName
       The name of the file to be written.
   
   Filenamesuffix
       The suffix to append to the file name when writing files at different timesteps. (File extensions such as .csv should be excluded.) The % format specifiers are used. For example, _%d will write files as FileName_0, FileName_1, FileName_2, etc., and _%.3d will write files as FileName_000, FileName_001, FileName_002 etc.
   
   Input
       The input filter/source whose output dataset is to be written to the file.
   
   PointDataArrays
       Select the point data arrays to pass through
   
   Precision
   
   RowDataArrays
       Select the row data arrays to pass through
   
   StringDelimiter
       Used to set the delimiter used for string data, if any, eg. double quotes(").
   
   UseScientificNotation
   
   UseStringDelimiter
       Used to enable StringDelimiter for string data. Enabled by default. Turn this off if you do not want quotes around the column headers.
   
   VertexDataArrays
       Select the vertex data arrays to pass through
   
   WriteTimeSteps
       When WriteTimeSteps is turned ON, the writer is executed once for each timestep available from its input.
   
   WriteTimeStepsSeparately
       When WriteTimeSteps is turned ON, the writer is executed once for each timestep available from its input, and the timesteps can be written to separate files, otherwise, the timesteps are written in one file.
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`